--- a/html/main-screen.html
+++ b/html/main-screen.html
@@ -401,7 +401,7 @@
                                                     </p>
                                                 </div>
                                                 <div class="d-flex gap-4">
-                                                    <button type="button" class="custom-cancel-btn">
+                                                    <button type="button" class="custom-cancel-btn" onclick="openConfirmModal()">
                                                         Hủy
                                                     </button>
                                                     <button type="button" class="custom-save-btn"
@@ -434,7 +434,27 @@
             </div>
         </div>
     </div>
+    <!--Modal confirm -->
+    <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmModalLabel">Xác nhận hủy</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Đóng"></button>
+                </div>
+                <div class="modal-body">
+                    Bạn có chắc chắn muốn hủy tin này không?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="no-confirm" data-bs-dismiss="modal">Không</button>
+                    <button type="button" class="yes-confirm" id="confirmDelete"
+                        onclick="showToast('Thao tác thành công!', 'success')">Xác nhận</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
