--- a/html/main-screen.html
+++ b/html/main-screen.html
@@ -533,37 +533,39 @@
         <div class="modal-dialog modal-dialog-centered modal-lg confirm-modal">
             <div class="modal-content">
                 <div class="modal-header">
-                    <p class="modal-title" id="confirmModalLabel">Hủy yêu cầu</p>
+                    <p class="modal-title" id="confirmModalLabel">Xác nhận hủy yêu cầu</p>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Đóng"></button>
                 </div>
-                <div class="modal-body">
-                    <p>Bạn có chắc muốn hủy yêu cầu từ:</p>
 
-                    <div class="d-flex ms-5 mt-3">
-                        <span class="me-2">STT:</span>
-                        <span id="confirm-stt"></span>
-                    </div>
-                    <div class="d-flex ms-5">
-                        <span class="me-2">Họ và tên:</span>
-                        <span id="confirm-name"></span>
-                    </div>
-                    <div class="d-flex ms-5">
-                        <span class="me-2">SĐT:</span>
-                        <span id="confirm-phone"></span>
-                    </div>
-                    <div class="d-flex ms-5">
-                        <span class="me-2">Dịch vụ:</span>
-                        <span id="confirm-service"></span>
-                    </div>
-                    <div class="d-flex ms-5 mt-2">
-                        <span class="me-2">Địa chỉ:</span>
-                        <span class="d-flex align-items-center ms-2" id="confirm-location"></span>
+                <div class="modal-body pt-0">
+                    <p class="my-3">Bạn có chắc chắn muốn hủy yêu cầu từ :</p>
+                    <div class="info-grid mt-2">
+                        <div class="info-item">
+                            <label>Họ và tên:</label>
+                            <span id="confirm-name"></span>
+                        </div>
+                        <div class="info-item">
+                            <label>STT:</label>
+                            <span id="confirm-stt"></span>
+                        </div>
+                        <div class="info-item">
+                            <label>SĐT:</label>
+                            <span id="confirm-phone"></span>
+                        </div>
+                        <div class="info-item">
+                            <label>Dịch vụ:</label>
+                            <span id="confirm-service"></span>
+                        </div>
+                        <div class="info-item">
+                            <label>Địa chỉ:</label>
+                            <span id="confirm-location" class="location"></span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="modal-footer">
-                    <button type="button" class="yes-confirm">Đồng ý</button>
-                    <button type="button" class="no-confirm" data-bs-dismiss="modal">Không</button>
+                <div class="modal-footer mt-3">
+                    <button type="button" class="btn btn-success yes-confirm">Đồng ý</button>
+                    <button type="button" class="btn btn-secondary no-confirm" data-bs-dismiss="modal">Không</button>
                 </div>
             </div>
         </div>
