--- a/html/news-management.html
+++ b/html/news-management.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cấu hình dịch vụ - Hệ thống đăng kí dịch vụ một cửa SOSR</title>
+    <title>Quản lý tin tức - Hệ thống đăng kí dịch vụ một cửa SOSR</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/responsive.css">
@@ -45,7 +45,7 @@
         </div>
     </header>
 
-    <div class="container-fluid">
+    <div class="container-fluid mt-2 mb-3">
         <div class="row main-layout">
             <!-- side bar -->
             <aside class="col-2 menu position-relative">
@@ -78,7 +78,7 @@
                         </p>
                     </div>
                     <div class="icon-wrapper">
-                        <ion-icon class="button-text-news" name="chevron-forward-outline"></ion-icon>
+                        <ion-icon class="button-text-news active" name="chevron-forward-outline"></ion-icon>
                     </div>
                 </a>
                 <div class="divider-vertical px-0"></div>
@@ -89,7 +89,7 @@
                 <div class="container-news-management show">
                     <div class="header-news d-flex justify-content-between align-items-center">
                         <p class="mb-0">Quản lý tin tức</p>
-                        <button class="btn">Thêm mới</button>
+                        <button>Thêm mới</button>
                     </div>
 
                     <div class="container">
@@ -99,7 +99,7 @@
                                 <!-- news -->
                                 <div id="list-news-container">
                                     <div class="card-news d-flex mb-3 d-none" id="news-template">
-                                        <img src="" class="img-fluid" alt="Tin tức">
+                                        <img src="" alt="Tin tức">
                                         <div class="card-body">
                                             <p class="card-text-1 mb-2"></p>
                                             <div class="d-flex justify-content-between align-items-center">
@@ -138,17 +138,8 @@
                                             <li class="page-item" id="prev-btn">
                                                 <a class="page-link" href="#"><i class="bi bi-chevron-left"></i></a>
                                             </li>
-                                            <li class="page-item" id="page-1">
-                                                <a class="page-link" href="#">1</a>
-                                            </li>
-                                            <li class="page-item dots" id="dots" data-page="">
-                                                <span class="page-link">…</span>
-                                            </li>
-                                            <li class="page-item" id="page-last">
-                                                <a class="page-link" href="#">1</a>
-                                            </li>
-                                            <li class="page-item" id="next-button">
-                                                <a class="page-link" href="#"> <i class="bi bi-chevron-right"></i> </a>
+                                            <li class="page-item" id="next-btn">
+                                                <a class="page-link" href="#"><i class="bi bi-chevron-right"></i></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -161,7 +152,9 @@
                             <div class="col-md-8 display-news px-4">
                                 <form action="">
                                     <div class="select-image-news d-flex align-items-center">
-                                        <img id="selected-image-news" src="/image/cam.png" alt="logo">
+                                        <div class="image-wrapper" id="imageWrapper">
+                                            <img id="selected-image-news" src="/image/cam.png" alt="logo">
+                                        </div>
                                         <input type="file" id="file-input" style="display: none;">
                                         <a id="choose-image-btn-news">Chọn ảnh bài viết</a>
                                     </div>
@@ -192,7 +185,7 @@
                                         </div>
                                     </div>
                                     <div class="service-news mt-3">
-                                        <p class="mb-2">Mô tả dịch vụ:</p>
+                                        <p class="mb-2">Nội dung ngắn gọn:</p>
                                         <textarea class="form-control" name="service-news" id=""></textarea>
                                     </div>
                                     <div class="mt-3">
@@ -200,12 +193,12 @@
                                         <div id="editor" class="quill-editor"></div>
                                     </div>
                                     <div class="publish-articles d-flex align-items-center mt-3">
-                                        <input type="checkbox" class="ms-2">
-                                        <label style="color: #4F4F4F;" for="" class="ms-3">Xuất bản bài viết</label>
+                                        <input type="checkbox" class="ms-2" id="publish-articles">
+                                        <label style="color: #4F4F4F;" for="publish-articles" class="ms-3">Xuất bản bài viết</label>
                                     </div>
                                     <div class="button-news d-flex justify-content-end">
-                                        <a class="btn cancel-news me-2" data-bs-toggle="modal" data-bs-target="#confirmModal">Hủy</a>
-                                        <button type="button" class="btn save-news"
+                                        <a class="cancel-news me-2" data-bs-toggle="modal" data-bs-target="#confirmModal">Hủy</a>
+                                        <button type="button" class="save-news"
                                             onclick="showToast('Thao tác thành công!', 'success')">Lưu lại</button>
                                     </div>
                                 </form>
@@ -254,7 +247,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
-    <script src="../js/router.js"></script>
+    <!-- <script src="../js/router.js"></script> -->
     <script src="../js/news-management.js"></script>
 </body>
 
